JScience Benchmark Overhaul: Standardized 12+ Benchmarks, JScience Studio GUI, and Distributed Monitoring with Prometheus/Grafana